@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2004/08/04 19:59:59 minskim Exp $
+# $NetBSD: Makefile,v 1.19 2004/09/25 00:40:53 minskim Exp $
 #
 
-DISTNAME=		mathomatic-11.3c
+DISTNAME=		mathomatic-11.3f
 CATEGORIES=		math
 MASTER_SITES=		http://www.panix.com/~gesslein/
 EXTRACT_SUFX=		.tgz
@@ -12,7 +12,6 @@ COMMENT=		Small portable symbolic math program
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
-WRKSRC=			${WRKDIR}/am
 USE_BUILDLINK3=		yes
 NO_CONFIGURE=		yes
 MAKEFILE=		makefile
